--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "graphql-codegen",
-    "prestart": "npm generate"
+    "generate": "graphql-codegen -w"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +52,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^1.19.4",
     "@graphql-codegen/typescript": "^1.19.0",
+    "@graphql-codegen/typescript-operations": "^1.17.12",
     "@types/enzyme": "^3.10.8",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "enzyme": "^3.11.0",
